--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 			<h2 class="projects__headline header-xl">Quallifications</h2>
 			<a href="#contact" class="projects__contact underline"></a>
 			<div class="projects__item">
-				<h3 class="projects__name">Bachelor in Geographic Sciences</h3>
+				<h3 class="projects__name">Bachelor Geographic Sciences</h3>
 				<p class="skills__description"></p>
 			</div>
 			<div class="projects__item">
-				<h3 class="projects__name">Master in Computational Sciences </h3>
+				<h3 class="projects__name">Master Computational Sciences </h3>
 				<p class="skills__description"></p>
 			</div>
 		</div>
