--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="assets/images/favicon-32x32.png"
+        href="assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>joaquingottlebe</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
@@ -31,7 +31,7 @@
             <div class="hero__text">
                 <h1 class="hero__headline header-xl">
                     Nice to<br />
-                    meet you! I'm <span>Joaquin Gottlebe</span>.
+                    meet you! I'm <span>huaqo</span>.
                 </h1>
                 <p class="hero__description">
                     A developer, based in Berlin, passionate about building
@@ -147,7 +147,7 @@
                     required
                 />
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
@@ -164,7 +164,7 @@
                     required
                 />
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
@@ -182,7 +182,7 @@
                     required
                 ></textarea>
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
